- fix MF Tahadath font-display from swap to block; - add preset height to contact photo to prevent layout shift;

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   src: url('/fonts/MF-Tahadath-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 :root {
